# nel_svn

./: .gitignore
nel/: AUTHORS  CMakeLists.txt  CMakePackaging.txt  Makefile  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  nel-config.in  nel.dsw  nel.sln  nel_8.sln
nel/CMakeModules/: Find3dsMaxSDK.cmake  FindDInput.cmake  FindGTK2.cmake  nel.cmake  opennel.cmake
nel/doc/: make_nel_dox.bat  make_nel_dox.sh  make_nelns_dox.sh  make_neltools_dox.sh  make_packages_doc.sh  nel.dox  nelns.dox
nel/include/: Makefile.am
nel/include/nel/: Makefile.am
nel/samples/: Makefile.am  all.sln
nel/samples/3d/: CMakeLists.txt  Makefile.am
nel/samples/georges/: CMakeLists.txt  Makefile.am  default.sample_config  georges_sample.sln  georges_sample.vcproj  main.cpp
nel/samples/net/: Makefile.am
nel/samples/pacs/: CMakeLists.txt  Makefile.am  Pacs sample.dsp  Pacs sample.dsw  Pacs sample.sln  Pacs sample.vcproj  main.cpp  object.cpp  object.h  pacs_sample.vcproj
nel/samples/sound_sources/: CMakeLists.txt  Makefile.am  main.cpp  sound_sources.dsp  sound_sources.dsw  sound_sources.sln  sound_sources.vcproj
nel/src/: 3d.dsp  3d.vcproj  3d_8.vcproj  Makefile  Makefile.am  ainimat.dsp  georges.dsp  georges.vcproj  georges_8.vcproj  ligo.dsp  ligo.vcproj  ligo_8.vcproj  logic.dsp  logic.vcproj  logic_8.vcproj  memory.dsp  memory.vcproj  memory_8.vcproj  misc.dsp  misc.vcproj  misc_8.vcproj  nel.dsp  nel.vcproj  net.dsp  net.vcproj  net_8.vcproj  pacs.dsp  pacs.vcproj  pacs_8.vcproj  sound.dsp  sound.vcproj  sound_8.vcproj
nel/src/3d/: CMakeLists.txt  Makefile.am  anim_ctrl.cpp  anim_detail_trav.cpp  animatable.cpp  animated_lightmap.cpp  animated_material.cpp  animated_morph.cpp  animated_value.cpp  animation.cpp  animation_optimizer.cpp  animation_playlist.cpp  animation_set.cpp  animation_set_user.cpp  animation_time.cpp  async_file_manager_3d.cpp  async_texture_block.cpp  async_texture_manager.cpp  bezier_patch.cpp  bloom_effect.cpp  bone.cpp  camera.cpp  camera_col.cpp  channel_mixer.cpp  clip_trav.cpp  cloud.cpp  cloud_scape.cpp  cloud_scape_user.cpp  cluster.cpp  coarse_mesh_build.cpp  coarse_mesh_manager.cpp  computed_string.cpp  cube_grid.cpp  cube_map_builder.cpp  debug_vb.cpp  deform_2d.cpp  driver.cpp  driver_user.cpp  driver_user2.cpp  dru.cpp  (+267 more)
nel/src/cegui/: CMakeLists.txt  nellogger.cpp  nelrenderer.cpp  nelresourceprovider.cpp  neltexture.cpp
nel/src/georges/: CMakeLists.txt  Makefile  Makefile.am  form.cpp  form.h  form_dfn.cpp  form_dfn.h  form_elm.cpp  form_elm.h  form_loader.cpp  form_loader.h  georges_file_format.txt  header.cpp  header.h  load_form.cpp  stdgeorges.cpp  stdgeorges.h  type.cpp  type.h
nel/src/ligo/: CMakeLists.txt  Makefile  Makefile.am  ligo_config.cpp  ligo_error.cpp  ligo_error.h  ligo_material.cpp  ligo_material.h  primitive.cpp  primitive_class.cpp  primitive_configuration.cpp  primitive_utils.cpp  transition.cpp  transition.h  zone_bank.cpp  zone_bank.h  zone_edge.cpp  zone_edge.h  zone_region.cpp  zone_region.h  zone_template.cpp  zone_template.h
nel/src/logic/: CMakeLists.txt  Makefile  logic_condition.cpp  logic_event.cpp  logic_state.cpp  logic_state_machine.cpp  logic_variable.cpp
nel/src/memory/: Makefile  Makefile.am  heap_allocator.cpp  heap_allocator.h  heap_allocator_inline.h  memory.cpp  memory_common.h  memory_manager.cpp  memory_mutex.cpp  memory_mutex.h  memory_tds.cpp  memory_tds.h
nel/src/misc/: CMakeLists.txt  Makefile  Makefile.am  aabbox.cpp  algo.cpp  app_context.cpp  async_file_manager.cpp  big_file.cpp  bit_mem_stream.cpp  bit_set.cpp  bitmap.cpp  bitmap_png.cpp  block_memory.cpp  bsphere.cpp  buf_fifo.cpp  check_fpu.cpp  class_id.cpp  class_registry.cpp  co_task.cpp  command.cpp  common.cpp  contiguous_block_allocator.cpp  cpu_info.cpp  cpu_time_stat.cpp  debug.cpp  di_event_emitter.cpp  di_game_device.cpp  di_game_device.h  di_keyboard_device.cpp  di_keyboard_device.h  di_mouse_device.cpp  di_mouse_device.h  diff_tool.cpp  displayer.cpp  dummy_window.cpp  dynloadlib.cpp  eid_translator.cpp  entity_id.cpp  eval_num_expr.cpp  event_emitter.cpp  (+79 more)
nel/src/net/: CMakeLists.txt  Makefile  Makefile.am  admin.cpp  buf_client.cpp  buf_net_base.cpp  buf_server.cpp  buf_sock.cpp  callback_client.cpp  callback_net_base.cpp  callback_server.cpp  dummy_tcp_sock.cpp  email.cpp  inet_address.cpp  listen_sock.cpp  login_client.cpp  login_cookie.cpp  login_server.cpp  message.cpp  message_recorder.cpp  module.cpp  module_common.cpp  module_gateway.cpp  module_gateway_transport.cpp  module_l5_transport.cpp  module_local_gateway.cpp  module_manager.cpp  module_message.cpp  module_socket.cpp  naming_client.cpp  net_displayer.cpp  net_log.cpp  net_manager.cpp  service.cpp  sock.cpp  stdin_monitor_thread.cpp  stdin_monitor_thread.h  stdnet.h  tcp_sock.cpp  transport_class.cpp  (+5 more)
nel/src/pacs/: CMakeLists.txt  Makefile  Makefile.am  build_indoor.cpp  build_indoor.h  chain.cpp  chain.h  chain_quad.cpp  chain_quad.h  collision_callback.cpp  collision_callback.h  collision_desc.cpp  collision_desc.h  collision_mesh_build.h  collision_ot.cpp  collision_ot.h  collision_surface_temp.cpp  collision_surface_temp.h  edge_collide.cpp  edge_collide.h  edge_quad.cpp  edge_quad.h  exterior_mesh.cpp  exterior_mesh.h  face_grid.h  global_retriever.cpp  global_retriever.h  local_retriever.cpp  local_retriever.h  move_cell.cpp  (+24 more)
nel/tools/: CMakeLists.txt  Makefile.am  all.sln
nelns/admin_executor_service/: CMakeLists.txt  Makefile.am  admin_executor_service.cpp  admin_executor_service.vcproj  log_report.cpp  log_report.h
nelns/admin_service/: CMakeLists.txt  Makefile.am  admin_service.cpp  admin_service.h  admin_service.vcproj  connection_web.cpp  connection_web.h
nelns/naming_service/: CMakeLists.txt  Makefile.am  naming_service.cfg  naming_service.cpp  naming_service.vcproj
nelns/welcome_service/: CMakeLists.txt  Makefile.am  welcome_service.cpp  welcome_service.h  welcome_service.vcproj  welcome_service_itf.h
snowballs2/client/: CMakeLists.txt  Makefile.am  client.cfg  client.cfg.in  client.dsp  client.vcproj  configure.in
(+1906 files in other folders)
