ADD_SUBDIRECTORY(src)

SET(database "${SNOWBALLS_DATA_FILE}")
CONFIGURE_FILE(client.cfg.in client.cfg)

INSTALL(FILES ${CMAKE_BINARY_DIR}/client.cfg DESTINATION ${SNOWBALLS_CONFIG_FILE})
INSTALL(DIRECTORY data/
        DESTINATION ${SNOWBALLS_DATA_FILE}/data
	COMPONENT snowballsdata
        PATTERN "CVS" EXCLUDE
        PATTERN ".svn" EXCLUDE
        PATTERN "Makefile*" EXCLUDE)
