FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nelsound")
SET(NLSOUND_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelsnd_lowlevel")
SET(NLSND_LOWLEVEL_LIB ${LIBNAME})

ADD_EXECUTABLE(nl_sample_sound_sources ${SRC})

IF(UNIX)
  ADD_DEFINITIONS(-DNL_SOUND_DATA="\\"${NL_SHARE_PREFIX}/nl_sample_sound/\\"")
ENDIF(UNIX)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(nl_sample_sound_sources ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NLSOUND_LIB} ${NLSND_LOWLEVEL_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(nl_sample_sound_sources PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:WINDOWS")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS nl_sample_sound_sources RUNTIME DESTINATION ${NL_BIN_PREFIX} COMPONENT samplessound)
INSTALL(DIRECTORY data/ 
	DESTINATION ${NL_SHARE_PREFIX}/nl_sample_sound/data
	COMPONENT samplespacs
	PATTERN "CVS" EXCLUDE
	PATTERN ".svn" EXCLUDE
	PATTERN "Makefile*" EXCLUDE)
