FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})
#DECORATE_NEL_LIB("nelceguirenderer")
#SET(NLCEGUIRENDERER_LIB ${LIBNAME})  ${NLCEGUIRENDERER_LIB}

ADD_EXECUTABLE(nl_sample_cegui ${SRC})

ADD_DEFINITIONS(-DCEGUI_DATA_DIR="\\"${NL_SHARE_PREFIX}/nl_sample_cegui/datafiles/\\"")

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${CEGUI_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(nl_sample_cegui ${LIBXML2_LIBRARIES} ${CEGUI_LIBRARY} ${PLATFORM_LINKFLAGS} ${NL3D_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(nl_sample_cegui PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:WINDOWS")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS nl_sample_cegui RUNTIME DESTINATION bin COMPONENT samples3d)
INSTALL(DIRECTORY datafiles/ 
	DESTINATION share/nel/nl_sample_cegui/datafiles
	COMPONENT samples3d
	PATTERN "CVS" EXCLUDE
	PATTERN ".svn" EXCLUDE
	PATTERN "Makefile*" EXCLUDE)
