FILE(GLOB SRC *.cpp *.h *.def)

LIST(REMOVE_ITEM SRC	${CMAKE_CURRENT_SOURCE_DIR}/std_afx2.h
						${CMAKE_CURRENT_SOURCE_DIR}/std_afx2.cpp)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NLM3D_LIB ${LIBNAME})

DECORATE_NEL_LIB("object_viewier")
SET(OBJECT_VIEWER_LIB ${LIBNAME})


ADD_LIBRARY(${OBJECT_VIEWER_LIB} SHARED ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${OBJECT_VIEWER_LIB} 
							${LIBXML2_LIBRARIES} 
							${NLMISC_LIB} 
							${NL3D_LIB} 
							${NEL_MESH_LIB} 
							${NEL_PATCH_LIB} 
							${MAXSDK_LIBRARIES} 
							Version.lib)
							
SET_TARGET_PROPERTIES(${OBJECT_VIEWER_LIB} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  #SET_TARGET_PROPERTIES(${NEL_PATCH_LIB} PROPERTIES COMPILE_FLAGS "/Yustdnet.h")
  #SET_SOURCE_FILES_PROPERTIES(stdnet.cpp PROPERTIES COMPILE_FLAGS "/Ycstdnet.h")
  SET_TARGET_PROPERTIES(${OBJECT_VIEWER_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS} -DOBJECT_VIEWER_LIB_EXPORTS)

INSTALL(TARGETS ${OBJECT_VIEWER_LIB} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
