FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})

IF(WIN32)
  ADD_EXECUTABLE(zviewer WIN32 ${SRC})
ELSE(WIN32)
  ADD_EXECUTABLE(zviewer ${SRC})
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(zviewer ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NL3D_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(zviewer PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS zviewer RUNTIME DESTINATION bin)
