FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})

IF(WIN32)
  ADD_EXECUTABLE(zviewer WIN32 ${SRC} zviewer.rc)
ELSE(WIN32)
  ADD_EXECUTABLE(zviewer ${SRC})
ENDIF(WIN32)

IF(UNIX)
  ADD_DEFINITIONS(-DNL_ZVIEWER_CFG="\\"${CMAKE_INSTALL_PREFIX}/share/nel/zviewer/\\"")
ENDIF(UNIX)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(zviewer ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NL3D_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(zviewer PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS zviewer RUNTIME DESTINATION bin COMPONENT tools3d)
INSTALL(FILES zviewer.cfg readme.txt DESTINATION share/nel/zviewer COMPONENT tools3d)
