FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelgeorges")
SET(NLGEORGES_LIB ${LIBNAME})

ADD_EXECUTABLE(georges2csv ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(georges2csv ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NLMISC_LIB} ${NLGEORGES_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(georges2csv PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS georges2csv RUNTIME DESTINATION bin COMPONENT toolsgeorges)
