FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("logic_editor")
SET(LOGICEDITOR_LIB ${LIBNAME})

ADD_EXECUTABLE(logic_editor WIN32 ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(logic_editor ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NLMISC_LIB} ${LOGICEDITOR_LIB})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

IF(WIN32)
  SET_TARGET_PROPERTIES(logic_editor PROPERTIES COMPILE_FLAGS "/Yustdafx.h")
  SET_SOURCE_FILES_PROPERTIES(stdafx.cpp PROPERTIES COMPILE_FLAGS "/Ycstdafx.h")
  SET_TARGET_PROPERTIES(logic_editor PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

INSTALL(TARGETS logic_editor RUNTIME DESTINATION bin)
