INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR}/tools/misc/message_box_qt/ )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/tools/misc/message_box_qt/ )
INCLUDE( ${QT_USE_FILE} )

FILE(GLOB MESSAGE_BOX_SRC *.cpp)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})

SET( QT_USE_QT3SUPPORT TRUE)
SET( QT_USE_QTXML TRUE)

ADD_EXECUTABLE(message_box_qt ${MESSAGE_BOX_SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${QT_INCLUDES})
TARGET_LINK_LIBRARIES(message_box_qt ${LIBXML2_LIBRARIES} ${QT_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NLMISC_LIB})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS} ${QT_DEFINITIONS})

INSTALL(TARGETS message_box_qt RUNTIME DESTINATION bin COMPONENT toolsmisc)

