FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nelpacs")
SET(NLPACS_LIB ${LIBNAME})

ADD_EXECUTABLE(build_indoor_rbank ${SRC})

IF(UNIX)
  ADD_DEFINITIONS(-DNL_BIRB_CFG="\\"${NL_ETC_PREFIX}/\\"")
ENDIF(UNIX)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(build_indoor_rbank ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NLPACS_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(build_indoor_rbank PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS build_indoor_rbank RUNTIME DESTINATION ${NL_BIN_PREFIX} COMPONENT toolspacs)
INSTALL(FILES build_indoor_rbank.cfg DESTINATION ${NL_ETC_PREFIX} COMPONENT toolspacs)
