FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nel_drv_dsound")
SET(NLDRV_DSOUND_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelsnd_lowlevel")
SET(NLSND_LOWLEVEL_LIB ${LIBNAME})

ADD_LIBRARY(${NLDRV_DSOUND_LIB} SHARED ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${DSOUND_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${NLDRV_DSOUND_LIB} ${LIBXML2_LIBRARIES} ${NLSND_LOWLEVEL_LIB} ${DSOUND_LIBRARY} dxguid.lib)
SET_TARGET_PROPERTIES(${NLDRV_DSOUND_LIB} PROPERTIES VERSION ${NL_VERSION})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

IF(WIN32)
  #TARGET_LINK_LIBRARIES(${NLDRV_DSOUND_LIB} )
  SET_TARGET_PROPERTIES(${NLDRV_DSOUND_LIB} PROPERTIES COMPILE_FLAGS "/Yustddsound.h")
  SET_SOURCE_FILES_PROPERTIES(stddsound.cpp PROPERTIES COMPILE_FLAGS "/Ycstddsound.h")
  SET_TARGET_PROPERTIES(${NLDRV_DSOUND_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

INSTALL(TARGETS ${NLDRV_DSOUND_LIB} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT driverssound)

