FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nel_drv_fmod")
SET(NLDRV_FMOD_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelsnd_lowlevel")
SET(NLSND_LOWLEVEL_LIB ${LIBNAME})

ADD_LIBRARY(${NLDRV_FMOD_LIB} SHARED ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${FMOD_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${NLDRV_FMOD_LIB} ${LIBXML2_LIBRARIES} ${FMOD_LIBRARY} ${NLSND_LOWLEVEL_LIB})
SET_TARGET_PROPERTIES(${NLDRV_FMOD_LIB} PROPERTIES VERSION ${NL_VERSION})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

IF(WIN32)
  #TARGET_LINK_LIBRARIES(${NLDRV_FMOD_LIB} eax.lib eaxguid.lib alut.lib)
  SET_TARGET_PROPERTIES(${NLDRV_FMOD_LIB} PROPERTIES COMPILE_FLAGS "/Yustdfmod.h")
  SET_SOURCE_FILES_PROPERTIES(stdfmod.cpp PROPERTIES COMPILE_FLAGS "/Ycstdfmod.h")
  SET_TARGET_PROPERTIES(${NLDRV_FMOD_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

INSTALL(TARGETS ${NLDRV_FMOD_LIB} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT driverssound)

