FILE(GLOB SRC *.cpp *.h ../../ig_lighter_lib/*.cpp ../../ig_lighter_lib/*.h)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelligo")
SET(NLLIGO_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelpacs")
SET(NLPACS_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_mesh_lib")
SET(NEL_MESH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_patch_lib")
SET(NEL_PATCH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_3dsmax_shared")
SET(NEL_3DSMAX_SHARED ${LIBNAME})

DECORATE_NEL_LIB("ligoscape_utility")
SET(MAX_LIGO_LIB ${LIBNAME})

#LINK_DIRECTORIES(${MAXSDK_LIBRARY_DIRS})

ADD_LIBRARY(${MAX_LIGO_LIB} SHARED ligoscape_utility.rc ${SRC} ligoscape_utility.def)

INCLUDE_DIRECTORIES(${MAXSDK_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES(${MAX_LIGO_LIB} 
							${LIBXML2_LIBRARIES} 
							${NLMISC_LIB} 
							${NLLIGO_LIB} 
							${NL3D_LIB} 
							${MAXSDK_LIBRARIES} 
							${NLPACS_LIB} 
							${NEL_PATCH_LIB} 
							${NEL_MESH_LIB}
							${NEL_3DSMAX_SHARED}
							comctl32)
SET_TARGET_PROPERTIES(${MAX_LIGO_LIB} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  #SET_TARGET_PROPERTIES(${MAX_LIGO_LIB} PROPERTIES COMPILE_FLAGS "/Yustdnet.h")
  #SET_SOURCE_FILES_PROPERTIES(stdnet.cpp PROPERTIES COMPILE_FLAGS "/Ycstdnet.h")
  SET_TARGET_PROPERTIES(${MAX_LIGO_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
  SET_TARGET_PROPERTIES(${MAX_LIGO_LIB} PROPERTIES SUFFIX ".dlx")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ${MAX_LIGO_LIB} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
