FILE(GLOB SRC *.cpp *.h *.def)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NLM3D_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_mesh_lib")
SET(NEL_MESH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_patch_lib")
SET(NEL_PATCH_LIB ${LIBNAME})

DECORATE_NEL_LIB("nel_3dsmax_shared")
SET(NEL_3DSMAX_SHARED ${LIBNAME})


ADD_LIBRARY(${NEL_3DSMAX_SHARED} SHARED ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${NEL_3DSMAX_SHARED} 
							${LIBXML2_LIBRARIES} 
							${NLMISC_LIB} 
							${NL3D_LIB} 
							${NEL_MESH_LIB} 
							${NEL_PATCH_LIB} 
							${MAXSDK_LIBRARIES} 
							Version.lib)
							
SET_TARGET_PROPERTIES(${NEL_3DSMAX_SHARED} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  #SET_TARGET_PROPERTIES(${NEL_PATCH_LIB} PROPERTIES COMPILE_FLAGS "/Yustdnet.h")
  #SET_SOURCE_FILES_PROPERTIES(stdnet.cpp PROPERTIES COMPILE_FLAGS "/Ycstdnet.h")
  SET_TARGET_PROPERTIES(${NEL_3DSMAX_SHARED} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS} -DNEL_3DSMAX_SHARED_EXPORTS)

INSTALL(TARGETS ${NEL_3DSMAX_SHARED} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
