FILE(GLOB SRC *.cpp *.h *.def ../../ig_lighter_lib/*.cpp ../../ig_lighter_lib/*.cpp)

LIST(REMOVE_ITEM SRC	${CMAKE_CURRENT_SOURCE_DIR}/last_lightmap.cpp
						${CMAKE_CURRENT_SOURCE_DIR}/nel_export_lightmap_v1.cpp
						${CMAKE_CURRENT_SOURCE_DIR}/nel_export_lightmap_v2.cpp)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NLM3D_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelpacs")
SET(NLPACS_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_mesh_lib")
SET(NEL_MESH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_patch_lib")
SET(NEL_PATCH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_3dsmax_shared")
SET(NEL_PATCH_LIB ${LIBNAME})
DECORATE_NEL_LIB("object_viewer")
SET(OBJECT_VIEWER_LIB ${LIBNAME})

DECORATE_NEL_LIB("nel_export")
SET(NEL_EXPORT ${LIBNAME})

ADD_LIBRARY(${NEL_EXPORT} SHARED ${SRC} nel_export.rc)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${NEL_EXPORT} 
							${LIBXML2_LIBRARIES} 
							${NLMISC_LIB} 
							${NLPACS_LIB} 
							${NL3D_LIB} 
							${NEL_MESH_LIB} 
							${NEL_PATCH_LIB} 
							${OBJECT_VIEWER_LIB} 
							${MAXSDK_LIBRARIES} 
							Version.lib
							comctl32.lib)
							
SET_TARGET_PROPERTIES(${NEL_EXPORT} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  #SET_TARGET_PROPERTIES(${NEL_PATCH_LIB} PROPERTIES COMPILE_FLAGS "/Yustdnet.h")
  #SET_SOURCE_FILES_PROPERTIES(stdnet.cpp PROPERTIES COMPILE_FLAGS "/Ycstdnet.h")
  SET_TARGET_PROPERTIES(${NEL_EXPORT} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
  SET_TARGET_PROPERTIES(${NEL_EXPORT} PROPERTIES SUFFIX ".dlu")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ${NEL_EXPORT} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
