FILE(GLOB SRC *.cpp *.h *.def)

DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NLM3D_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_mesh_lib")
SET(NEL_MESH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_patch_lib")
SET(NEL_PATCH_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel_3dsmax_shared")
SET(NEL_PATCH_LIB ${LIBNAME})

DECORATE_NEL_LIB("nel_vertex_tree_paint")
SET(NEL_VERTEX_TREE_PAINT ${LIBNAME})


ADD_LIBRARY(${NEL_VERTEX_TREE_PAINT} SHARED ${SRC} vertex_tree_paint.def vertex_tree_paint.rc)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${NEL_VERTEX_TREE_PAINT} 
							${LIBXML2_LIBRARIES} 
							${NLMISC_LIB} 
							${NL3D_LIB} 
							${NEL_MESH_LIB} 
							${NEL_PATCH_LIB} 
							${MAXSDK_LIBRARIES} 
							Version.lib
							comctl32.lib)
							
SET_TARGET_PROPERTIES(${NEL_VERTEX_TREE_PAINT} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  #SET_TARGET_PROPERTIES(${NEL_PATCH_LIB} PROPERTIES COMPILE_FLAGS "/Yustdnet.h")
  #SET_SOURCE_FILES_PROPERTIES(stdnet.cpp PROPERTIES COMPILE_FLAGS "/Ycstdnet.h")
  SET_TARGET_PROPERTIES(${NEL_VERTEX_TREE_PAINT} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
  SET_TARGET_PROPERTIES(${NEL_VERTEX_TREE_PAINT} PROPERTIES SUFFIX ".dlm")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ${NEL_VERTEX_TREE_PAINT} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
